<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/order_pizza_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Main layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- Left side for pizza adding -->
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_style" />

            <Spinner
                android:id="@+id/styleSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/typeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_type"
                android:visibility="gone"/>

            <Spinner
                android:id="@+id/typeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/sizeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_size"
                android:visibility="gone"/>

            <Spinner
                android:id="@+id/sizeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_toppings" />

            <!-- Available Toppings RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/toppingsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/added_toppings" />

            <!-- Selected Toppings RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/selectedToppingsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_label"/>

                <TextView
                    android:id="@+id/priceValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </LinearLayout>


            <Button
                android:id="@+id/addpizzaButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_pizza" />
        </LinearLayout>

        <!-- Right side for pizza preview -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza_preview" />

            <ImageView
                android:id="@+id/pizzaImageview"
                android:layout_width="150dp"
                android:layout_height="150dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crust_label" />

            <TextView
                android:id="@+id/crustValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/added_pizzas" />

            <!-- Added pizzas RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/addedpizzaRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="150dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_price_label" />
                <TextView
                    android:id="@+id/totalpriceValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </LinearLayout>

            <Button
                android:id="@+id/removepizzaButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remove_pizza" />

            <Button
                android:id="@+id/finalizeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finalize_order" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
